# fslnets

./: .gitignore  .gitlab-ci.yml  .gitmodules  MANIFEST.in  README.md  pyproject.toml
.ci/: unit_tests.sh
fsl/nets/: __init__.py  boxplots.py  classify.py  clean.py  dualreg.py  edgepics.py  glm.py  groupmean.py  hierarchy.py  load.py  netmats.py  spectra.py  util.py  web.py
fsl/nets/test/: __init__.py  test_clean.py  test_load.py  test_spectra.py
fsl_course_data/rest/Nets/: run_fslnets.py  run_groupICA.sh
fsl_course_data/rest/Nets/fslnets_headless_outputs_verify/: Fnetmats_corr.npy  Mnet_F.npy  Mnet_P.npy  Pnetmats_ridgep.npy  Znet_F.npy  Znet_P.npy  p_corr.npy  p_uncorr.npy  run_summary.json
