[project]
name              = "fslnets"
version           = "0.7.3"
description       = "A set of simple scripts for carrying out basic network modelling from (typically FMRI) timeseries data."
readme            = "README.md"
requires-python   = ">=3.7"
license           = { file="LICENSE" }

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3"
]

authors = [
    { name="Steve Smith" },
    { name="Ludovica Griffanti" },
    { name="Eugene Duff" },
    { name="Roser Sala" },
    { name="Paul McCarthy" },
]

dependencies = [
  "fslpy",
  "fsl-pipe",
  "matplotlib",
  "numpy",
  "scikit-learn",
  "scipy",
  "seaborn",
]

[project.urls]
"Homepage" = "https://git.fmrib.ox.ac.uk/fsl/fslnets"

[tool.setuptools.packages.find]
include = ["fsl", "fsl.nets"]
